@@ -105,24 +105,25 @@ bounded by start and end, which must be numeric bounding-indices."
   (produce-digest digest))
 
 (defmethod produce-digest ((state tree-hash) &key digest (digest-start 0))
-  (when (or (not (zerop (tree-hash-block-index state)))
-            (null (tree-hash-branch state)))
-    (update-tree-hash-branch state))
-  (let* ((internal-state (tree-hash-state state))
-         (result
-          (reduce (lambda (hash2 hash1)
-                    (cond
-                      ((null hash2) hash1)
-                      ((null hash1) hash2)
-                      (t (combine-hash-tree-digests internal-state hash1 hash2))))
-                  (tree-hash-branch state))))
-    (if digest
-        (if (<= (length result) (- (length digest) digest-start))
-            (replace digest result :start1 digest-start)
-            (error 'insufficient-buffer-space
-                   :buffer digest :start digest-start
-                   :length (length result)))
-        result)))
+  (let ((state (copy-digest state)))
+    (when (or (not (zerop (tree-hash-block-index state)))
+              (null (tree-hash-branch state)))
+      (update-tree-hash-branch state))
+    (let* ((internal-state (tree-hash-state state))
+           (result
+             (reduce (lambda (hash2 hash1)
+                       (cond
+                         ((null hash2) hash1)
+                         ((null hash1) hash2)
+                         (t (combine-hash-tree-digests internal-state hash1 hash2))))
+                     (tree-hash-branch state))))
+      (if digest
+          (if (<= (length result) (- (length digest) digest-start))
+              (replace digest result :start1 digest-start)
+              (error 'insufficient-buffer-space
+                     :buffer digest :start digest-start
+                     :length (length result)))
+          result))))
 
 (setf (get 'tree-hash '%digest-length) 24)
 (setf (get 'tree-hash '%make-digest) (symbol-function '%make-tree-hash-digest))
